# diligent_home_task

./: CMakeLists.txt  README.md  package.xml  setup.py
scripts/: polygonal_path.py
src/diligent_home_task/: compute_waypoints.py
tests/: test_compute_waypoints.py  test_pep257.py  test_pep8.py
