<?xml version="1.0"?>
<package format="2">
  <name>diligent_home_task</name>
  <version>0.0.0</version>
  <description>A ROS1 package implementing the home task for Diligent Robotics</description>

  <maintainer email="leanderdsouza1234@gmail.com">Leander Stephen D'Souza</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

	<!-- Dpendencies -->
	<depend>tf_conversions</depend>
  <depend>move_base</depend>
	<depend>python3-catkin-tools</depend>
	<depend>python3-pycodestyle</depend>

  <export>
  </export>
</package>
